// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not crash without data 1`] = `
<div
  class="shadow-small"
  style="margin: 0.5rem;"
>
  <div
    class="jsx-3444980649 container"
  />
</div>
`;

exports[`should render a note component 1`] = `
<div
  class="shadow-small"
  style="margin: 0.5rem;"
>
  <div
    class="jsx-3444980649 container"
  >
    <h4
      class="jsx-3444980649 title"
    >
      note title
    </h4>
    <p
      class="jsx-3444980649 content"
    >
      note content
    </p>
  </div>
</div>
`;
